force-app/main/default/objects/Activity/fields/Logging_Team__c.field-meta.xml
<CustomField>
    <fullName>Logging_Team__c</fullName>
    <description>The ESSC team that logged this activity. Defined on Activity, so it is shared by both Task and Event - Salesforce does not allow a custom field on Task or Event alone.</description>
    <inlineHelpText>Which ESSC team logged this interaction. Set this so other teams can tell at a glance who owns the touchpoint.</inlineHelpText>
    <label>Logging Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GR</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>MarCom</fullName>
            </value>
            <value>
                <fullName>Grants</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>